--- a/music.html
+++ b/music.html
@@ -4,424 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Music — Sketchy Ponderings</title>
-
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
-
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      min-height: 100vh;
-      font-family: 'Source Sans Pro', sans-serif;
-      background-color: #0a0a0a;
-      color: #f0f0f0;
-      overflow-x: hidden;
-      position: relative;
-    }
-
-    .background {
-      background: rgba(20, 20, 30, 0.8);
-      opacity: 1;
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-    }
-
-    .mist-overlay {
-      background: url('images/mist-overlay.png') repeat;
-      opacity: 0.4;
-      position: fixed;
-      width: 100%;
-      height: 250vh;
-      z-index: -1;
-      animation: mistScroll 120s linear infinite;
-    }
-
-    @keyframes mistScroll {
-      from { background-position: 0 0; }
-      to { background-position: -500px 500px; }
-    }
-
-    .header {
-      text-align: center;
-      padding: 3rem 2rem 2rem;
-      backdrop-filter: blur(5px);
-      background: rgba(0, 0, 0, 0.2);
-      margin-bottom: 2rem;
-    }
-
-    h1 {
-      font-family: 'Cormorant Garamond', serif;
-      font-size: 3.5rem;
-      font-weight: 500;
-      color: #f2f2f2;
-      text-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-      margin-bottom: 0.5rem;
-    }
-
-    .subtitle {
-      font-size: 1.2rem;
-      color: rgba(255, 255, 255, 0.8);
-      font-weight: 300;
-      font-style: italic;
-    }
-
-    .nav {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 1rem;
-      max-width: 600px;
-      margin: 0 auto 3rem;
-      padding: 0 2rem;
-    }
-
-    .nav a {
-      background: rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
-      color: #fff;
-      text-decoration: none;
-      padding: 1rem 1.5rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-weight: 400;
-      transition: all 0.3s ease;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      text-align: center;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .nav a:hover {
-      background: rgba(255, 255, 255, 0.15);
-      border-color: rgba(255, 255, 255, 0.4);
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    .nav a.creative {
-      border-color: rgba(138, 43, 226, 0.4);
-    }
-
-    .nav a.creative:hover {
-      border-color: rgba(138, 43, 226, 0.8);
-      background: rgba(138, 43, 226, 0.1);
-    }
-
-    .nav a.current {
-      background: rgba(138, 43, 226, 0.2);
-      border-color: rgba(138, 43, 226, 0.6);
-    }
-
-    /* More CSS for .playlist-grid, .track-card, .audio-player etc. would follow in the next chunk */
-    /* ========== MUSIC SECTION STYLES ========== */
-.music-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-.intro-section {
-  text-align: center;
-  max-width: 700px;
-  margin: 0 auto 3rem;
-  padding: 2rem;
-  background: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 15px;
-}
-
-.intro-section p {
-  color: rgba(255, 255, 255, 0.8);
-  line-height: 1.6;
-  font-size: 1.1rem;
-  margin-bottom: 1.5rem;
-}
-
-.playlist-controls {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 1.5rem;
-  margin-bottom: 2rem;
-  background: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 12px;
-}
-
-.continuous-play-toggle,
-.shuffle-button,
-.repeat-button {
-  background: rgba(0, 0, 0, 0.4);
-  color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 0.75rem 1.25rem;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  font-size: 1rem;
-}
-
-.continuous-play-toggle:hover,
-.shuffle-button:hover,
-.repeat-button:hover {
-  background: rgba(255, 255, 255, 0.1);
-  border-color: rgba(255, 255, 255, 0.3);
-}
-
-.playlist-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap: 2rem;
-}
-
-.track-card {
-  background: rgba(0, 0, 0, 0.4);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 15px;
-  padding: 2rem;
-  backdrop-filter: blur(12px);
-  transition: transform 0.3s ease;
-}
-
-.track-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-  border-color: rgba(255, 255, 255, 0.4);
-}
-
-.track-title {
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 1.6rem;
-  color: #f0f0f0;
-  margin-bottom: 0.5rem;
-}
-
-.track-description {
-  font-size: 0.95rem;
-  color: rgba(255, 255, 255, 0.7);
-  font-style: italic;
-  margin-bottom: 1rem;
-}
-
-.audio-player {
-  padding: 1rem;
-  border-radius: 12px;
-  background: rgba(0, 0, 0, 0.6);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.player-controls {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-
-.play-button {
-  background: rgba(138, 43, 226, 0.3);
-  border: 2px solid rgba(138, 43, 226, 0.6);
-  color: #fff;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-  font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.play-button:hover {
-  background: rgba(138, 43, 226, 0.5);
-  transform: scale(1.05);
-  border-color: rgba(138, 43, 226, 0.8);
-}
-
-.track-info {
-  flex: 1;
-}
-
-.track-name {
-  font-weight: 500;
-  color: #f2f2f2;
-}
-
-.track-time {
-  font-size: 0.85rem;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.progress-container {
-  margin-bottom: 1rem;
-}
-
-.progress-bar {
-  width: 100%;
-  height: 6px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 3px;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.progress-fill {
-  height: 100%;
-  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.5));
-  width: 0%;
-}
-
-.volume-container {
-  display: flex;
-  align-items: center;
-  gap: 0.75rem;
-}
-
-.volume-icon {
-  font-size: 1rem;
-}
-
-.volume-slider {
-  flex: 1;
-  height: 4px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 2px;
-  position: relative;
-}
-
-.volume-fill {
-  height: 100%;
-  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.5));
-  width: 70%;
-  border-radius: 2px;
-}
-
-.volume-text {
-  font-size: 0.8rem;
-  color: rgba(255, 255, 255, 0.6);
-  min-width: 30px;
-  text-align: right;
-}
-
-/* Responsive tweaks */
-@media (max-width: 768px) {
-  .playlist-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .player-controls {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-}
-
-   /* ========== NOW PLAYING BAR ========== */
-.now-playing-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(10, 10, 10, 0.9);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.75rem 1.25rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  opacity: 0;
-  transform: translateY(100%);
-  transition: all 0.4s ease;
-  z-index: 10;
-}
-
-.now-playing-bar.show {
-  opacity: 1;
-  transform: translateY(0%);
-}
-
-.global-play-button {
-  background: rgba(138, 43, 226, 0.4);
-  border: 2px solid rgba(138, 43, 226, 0.8);
-  color: white;
-  font-size: 1.1rem;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.now-playing-info {
-  flex: 1;
-  margin: 0 1rem;
-}
-
-.now-playing-title {
-  font-weight: bold;
-  color: #f0f0f0;
-  margin-bottom: 0.3rem;
-}
-
-.now-playing-progress {
-  width: 100%;
-  height: 4px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 2px;
-  overflow: hidden;
-}
-
-.now-playing-fill {
-  height: 100%;
-  background: rgba(138, 43, 226, 0.7);
-  width: 0%;
-}
-
-.track-counter {
-  font-size: 0.9rem;
-  color: rgba(255, 255, 255, 0.6);
-  min-width: 60px;
-  text-align: right;
-}
-
-/* ========== BACK TO TOP BUTTON ========== */
-.back-to-top {
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  background: rgba(255, 255, 255, 0.1);
-  color: white;
-  font-size: 1.3rem;
-  padding: 0.6rem 1rem;
-  border-radius: 50%;
-  cursor: pointer;
-  opacity: 0;
-  transform: translateY(30px);
-  transition: all 0.3s ease;
-  z-index: 10;
-}
-
-.back-to-top.show {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
   <div class="background"></div>
   <div class="mist-overlay"></div>
@@ -465,16 +50,13 @@
     </div>
 
     <div class="playlist-grid">
-      <!-- TRACK CARD TEMPLATE -->
       <div class="track-card">
         <div class="track-title">Fairy Strum</div>
         <div class="track-description">Delicate plucked melodies that dance like forest spirits, weaving magic through gentle harmonic progressions.</div>
-        <div class="waveform-visual">
-          <div class="waveform-bars">
-            <div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div>
-            <div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div>
-          </div>
-        </div>
+        <div class="waveform-visual"><div class="waveform-bars">
+          <div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div>
+          <div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div><div class="waveform-bar"></div>
+        </div></div>
         <div class="audio-player">
           <audio src="music/FairyStrum.mp3" preload="metadata"></audio>
           <div class="player-controls">
@@ -492,183 +74,21 @@
           </div>
         </div>
       </div>
-      <!-- /TRACK CARD TEMPLATE -->
-
-      <!-- Duplicate the above block for each track you want to add -->
     </div>
   </div>
 
-  <!-- Now Playing Bar -->
   <div class="now-playing-bar" id="nowPlayingBar">
     <div class="global-play-button" id="globalPlayButton">▶</div>
     <div class="now-playing-info">
       <div class="now-playing-title" id="nowPlayingTitle">No Track Playing</div>
-      <div class="now-playing-progress">
-        <div class="now-playing-fill" id="nowPlayingFill"></div>
-      </div>
+      <div class="now-playing-progress"><div class="now-playing-fill" id="nowPlayingFill"></div></div>
     </div>
     <div class="track-counter" id="trackCounter">0 / 0</div>
   </div>
 
-  <!-- Back to Top Button -->
   <div class="back-to-top" id="backToTop">↑</div>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 Sketchy Ponderings — quietly relentless.
-  </footer>
-
-  <!-- JavaScript follows next -->
-
-
- <script>
-  const trackCards = document.querySelectorAll('.track-card');
-  const nowPlayingBar = document.getElementById('nowPlayingBar');
-  const nowPlayingTitle = document.getElementById('nowPlayingTitle');
-  const nowPlayingFill = document.getElementById('nowPlayingFill');
-  const globalPlayButton = document.getElementById('globalPlayButton');
-  const trackCounter = document.getElementById('trackCounter');
-  const backToTop = document.getElementById('backToTop');
-
-  let currentTrack = null;
-  let currentCard = null;
-  let isContinuous = false;
-  let isLooping = false;
-  let allTracks = [];
-
-  document.getElementById('continuousToggle').addEventListener('click', () => {
-    isContinuous = !isContinuous;
-    document.getElementById('continuousToggle').classList.toggle('active', isContinuous);
-    document.getElementById('toggleSwitch').classList.toggle('active', isContinuous);
-  });
-
-  document.getElementById('loopToggle').addEventListener('click', () => {
-    isLooping = !isLooping;
-    document.getElementById('loopToggle').classList.toggle('active', isLooping);
-    document.getElementById('loopSwitch').classList.toggle('active', isLooping);
-  });
-
-  document.getElementById('shuffleButton').addEventListener('click', () => {
-    allTracks = Array.from(trackCards).sort(() => Math.random() - 0.5);
-    updateTrackCounter();
-  });
-
-  document.getElementById('repeatButton').addEventListener('click', () => {
-    isLooping = true;
-    isContinuous = true;
-    document.getElementById('loopToggle').classList.add('active');
-    document.getElementById('continuousToggle').classList.add('active');
-    document.getElementById('loopSwitch').classList.add('active');
-    document.getElementById('toggleSwitch').classList.add('active');
-  });
-
-  trackCards.forEach((card, index) => {
-    const audio = card.querySelector('audio');
-    const playButton = card.querySelector('.play-button');
-    const progressBar = card.querySelector('.progress-bar');
-    const progressFill = card.querySelector('.progress-fill');
-    const volumeSlider = card.querySelector('.volume-slider');
-    const volumeFill = card.querySelector('.volume-fill');
-    const volumeText = card.querySelector('.volume-text');
-    const trackTime = card.querySelector('.track-time');
-
-    allTracks.push({ card, audio });
-
-    playButton.addEventListener('click', () => {
-      if (audio === currentTrack && !audio.paused) {
-        audio.pause();
-        playButton.textContent = '▶';
-        globalPlayButton.textContent = '▶';
-        return;
-      }
-
-      stopAllTracks();
-      audio.play();
-      currentTrack = audio;
-      currentCard = card;
-
-      card.classList.add('playing');
-      playButton.textContent = '⏸';
-      globalPlayButton.textContent = '⏸';
-
-      nowPlayingBar.classList.add('show');
-      nowPlayingTitle.textContent = card.querySelector('.track-name').textContent;
-
-      updateTrackCounter();
-    });
-
-    audio.addEventListener('timeupdate', () => {
-      const percent = (audio.currentTime / audio.duration) * 100;
-      progressFill.style.width = percent + '%';
-      nowPlayingFill.style.width = percent + '%';
-
-      const formatTime = t => isNaN(t) ? '0:00' : `${Math.floor(t / 60)}:${('0' + Math.floor(t % 60)).slice(-2)}`;
-      trackTime.textContent = `${formatTime(audio.currentTime)} / ${formatTime(audio.duration)}`;
-    });
-
-    progressBar.addEventListener('click', e => {
-      const rect = progressBar.getBoundingClientRect();
-      const percent = (e.clientX - rect.left) / rect.width;
-      audio.currentTime = percent * audio.duration;
-    });
-
-    volumeSlider.addEventListener('click', e => {
-      const rect = volumeSlider.getBoundingClientRect();
-      const percent = (e.clientX - rect.left) / rect.width;
-      audio.volume = percent;
-      volumeFill.style.width = `${percent * 100}%`;
-      volumeText.textContent = `${Math.round(percent * 100)}%`;
-    });
-
-    audio.addEventListener('ended', () => {
-      playButton.textContent = '▶';
-      card.classList.remove('playing');
-
-      if (isLooping) {
-        audio.currentTime = 0;
-        audio.play();
-        return;
-      }
-
-      if (isContinuous) {
-        let nextIndex = (allTracks.findIndex(t => t.audio === audio) + 1) % allTracks.length;
-        allTracks[nextIndex].card.querySelector('.play-button').click();
-      }
-    });
-  });
-
-  globalPlayButton.addEventListener('click', () => {
-    if (!currentTrack) return;
-    const playBtn = currentCard.querySelector('.play-button');
-    playBtn.click();
-  });
-
-  window.addEventListener('scroll', () => {
-    backToTop.classList.toggle('show', window.scrollY > 300);
-  });
-
-  backToTop.addEventListener('click', () => {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  });
-
-  function stopAllTracks() {
-    trackCards.forEach(card => {
-      const audio = card.querySelector('audio');
-      const button = card.querySelector('.play-button');
-      card.classList.remove('playing');
-      audio.pause();
-      button.textContent = '▶';
-    });
-  }
-
-  function updateTrackCounter() {
-    const index = allTracks.findIndex(t => t.audio === currentTrack);
-    trackCounter.textContent = `${index + 1} / ${allTracks.length}`;
-  }
-
-  updateTrackCounter();
-</script>
-
+  <footer>&copy; 2025 Sketchy Ponderings — quietly relentless.</footer>
+  <script src="script.js"></script>
 </body>
 </html>
-
