Change title and headings from 'Sketchy Ponderings' to 'Subtle Spirits'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sketchy Ponderings</title>
+  <title>Subtle Spirits</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
   <style>
     * {
@@ -440,7 +440,7 @@
     <!-- ORACLE GLYPH ABOVE TITLE -->
     <a href="sigil-oracle.html" class="oracle-link" id="oracleGlyph" title="Open the Oracle">✶</a>
 
-    <h1>Sketchy Ponderings</h1>
+    <h1>Subtle Spirits</h1>
     <p class="subtitle">Creative explorations at the threshold of becoming</p>
 
     <div class="nav">
@@ -462,7 +462,7 @@
   <a href="american-mystery-religion.html" class="mystery-link" id="mysteryGlyph" title="Enter the Mystery">🜁</a>
 
   <footer>
-    &copy; 2025 Sketchy Ponderings — quietly relentless.
+    &copy; 2025 Subtle Spirits — quietly relentless.
   </footer>
 
   <script>
